# imap-codec

bindings/imap-codec-python/: imap_codec.pyi  pyproject.toml
bindings/imap-codec-python/examples/: __main__.py  parse_command.py  parse_greeting.py  parse_response.py
bindings/imap-codec-python/examples/common/: __init__.py
bindings/imap-codec-python/imap_codec/: __init__.py
bindings/imap-codec-python/imap_codec/models/: common.py  greeting.py
bindings/imap-codec-python/src/: lib.rs
bindings/imap-codec-python/tests/: test_authenticate_data_decode.py  test_authenticate_data_encode.py  test_command_decode.py  test_command_encode.py  test_fragments.py  test_greeting_decode.py  test_greeting_encode.py  test_greeting_models.py  test_idle_done_decode.py  test_idle_done_encode.py  test_response_decode.py  test_response_encode.py
