[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "imap-codec"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.8.2",
]

[tool.pdm.scripts]
dev = "maturin develop"
mbuild = "maturin build -o dist"

[tool.maturin]
module-name = "imap_codec._imap_codec"
features = ["pyo3/extension-module"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "maturin>=1.7.0",
    "pip>=24.1.2", # maturin requires pip, but pdm venv does not install it
]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "I",   # sort imports
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "E501", # line-too-long
    "PYI021", # docstring-in-stub
]
